--- a/templates/forms/new_artist.html
+++ b/templates/forms/new_artist.html
@@ -27,7 +27,7 @@
       <div class="form-group">
         <label for="genres">Genres</label>
         <small>Ctrl+Click to select multiple</small>
-        {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', autofocus = true) }}
+        {{ form.genres(class_ = 'form-control', autofocus = true) }}
       </div>
       <div class="form-group">
           <label for="website">Website</label>
@@ -48,7 +48,7 @@
         </div>
         {{ form.seeking_description(class_ = 'form-control', placeholder='Description', autofocus = true) }}
       </div>
-      <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block">
+      <input type="submit" value="Create Artist" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
 {% endblock %}
